Fix body tag alignment in index.html and update CSS for proper display

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
      text-align: center;
      width: 150px;
      height: 150px;
+     display: flex;
      
 
 
